--- a/vercel.json
+++ b/vercel.json
@@ -9,10 +9,10 @@
       }
     },
     {
-      "src": "client/**",
+      "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "./dist/public"
+        "distDir": "dist/public"
       }
     }
   ],
@@ -22,8 +22,12 @@
       "dest": "/server/index.ts"
     },
     {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
+      "dest": "/dist/public/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/client/$1"
+      "dest": "/dist/public/index.html"
     }
   ],
   "env": {
