--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # MongoDB Atlas Configuration
-MONGODB_URI=mongodb+srv://chaifimdu_db_user:chaifimdu_db_user%402025@chaifi.1dcy7wl.mongodb.net/chai-fi?retryWrites=true&w=majority&appName=Chaifi
-DATABASE_URL=mongodb+srv://chaifimdu_db_user:chaifimdu_db_user%402025@chaifi.1dcy7wl.mongodb.net/chai-fi?retryWrites=true&w=majority&appName=Chaifi
+MONGODB_URI=mongodb+srv://jei07705_db_user:h1rBmd0sRjAMJYcb@cluster0.dienlq1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+DATABASE_URL=mongodb+srv://jei07705_db_user:h1rBmd0sRjAMJYcb@cluster0.dienlq1.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # Session Security
 SESSION_SECRET=your-super-secure-random-string-for-production-use
