--- a/vercel.json
+++ b/vercel.json
@@ -19,6 +19,13 @@
   ],
   "routes": [
     {
+      "src": "/api/health",
+      "dest": "/api/index.ts",
+      "headers": {
+        "Cache-Control": "no-cache"
+      }
+    },
+    {
       "src": "/api/(.*)",
       "dest": "/api/index.ts",
       "headers": {
@@ -27,14 +34,14 @@
     },
     {
       "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot))",
-      "dest": "/dist/public/$1",
+      "dest": "/$1",
       "headers": {
         "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/public/index.html"
+      "dest": "/index.html"
     }
   ],
   "functions": {
@@ -42,5 +49,6 @@
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"]
+  "regions": ["iad1"],
+  "outputDirectory": "dist/public"
 }
